# metric-anomaly-investigator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflow.yml
evals/: eval.py
examples/: planner_example.py  warehouse_example.py
scripts/: cli.py  db.py  planner.py
src/agent_demo/: __init__.py
src/metric_anomaly_investigator/: __init__.py  cli.py  investigation_planner.py  metric_anomaly_agent.py  models.py  report_formatter.py  settings.py  tool_executor.py
src/metric_anomaly_investigator/agent/: __init__.py  insights_agent.py  investigation_planner_agent.py  metric_anomaly_agent.py  prompts.py  tool_executor.py
src/metric_anomaly_investigator/db/: mock_warehouse.py
src/metric_anomaly_investigator/mock_warehouse/: __init__.py  generator.py  warehouse.py
src/metric_anomaly_investigator/schemas/: __init__.py  investigation_actions.py  models.py
tests/: test_main.py
