[project]
name = "metric-anomaly-investigator"
version = "0.1.0"
description = "An investigator for metric anomalies using AI."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=3.0.0,<4.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-ai>=1.51.0,<2.0.0",
    "scipy>=1.17.0",
]

[dependency-groups]
tests = ["pytest"]

local = ["ipython", "ruff>=0.14.14,<0.15.0", "pre-commit>=4.5.1,<5.0.0"]

[project.scripts]
metric-anomaly-investigator = "metric_anomaly_investigator.cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
